# canvas-with-langgraph-python

./: .gitignore  HITL_FIXES.md  Pipfile  README.md  TESTING_GUIDE.md  package.json  requirements.txt  tsconfig.json
agent/: agent.py  copilotkit_state.py  langgraph.json  pyproject.toml  requirements.txt
agent/copilotkit/: __init__.py  state.py
api/: langgraph.py
scripts/: setup-agent.bat  setup-agent.sh
src/: instrumentation-client.ts
src/app/: globals.css  page.tsx
src/app/api/copilotkit/: route.ts
src/components/ui/: chart.tsx  toaster.tsx
src/hooks/: use-mobile.tsx
src/types/: ag-ui__langgraph.d.ts
