[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "canvas_agent"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "langchain==0.3.26",
  "langgraph>=0.4.12",
  "langsmith==0.4.4",
  "openai>=1.68.2,<2.0.0",
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "langgraph-cli[inmem]>=0.3.5",
  "langchain-openai>=0.0.1",
  "copilotkit>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true


